--- a/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
+++ b/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
@@ -504,7 +504,7 @@ cd8 <- AddMetaData(cd8, new_metadata)
 cd4 <- AddMetaData(cd4, new_metadata)
 ```
 
-Finally, modify the celltype of the CD4+ T cells to distinguish Tcon and Treg based on the Seurat clusters for later analyses:
+Modify the celltype of the CD4+ T cells to distinguish Tcon and Treg based on the Seurat clusters for later analyses:
 ```{r distinguish Tcon and Treg}
 new_metadata <- cd4@meta.data %>% 
                   mutate(celltype = ifelse(seurat_clusters %in% c("Treg_Tigit_lo","Treg_Tigit_hi"), "Treg", "Tcon")) %>% 
@@ -514,6 +514,19 @@ seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
 #add to cd8 and cd4 separate Seurats
 cd8 <- AddMetaData(cd8, new_metadata)
 cd4 <- AddMetaData(cd4, new_metadata)
+```
+
+Add the UMAP cell embeddings (UMAP positions) to the meta data for the Seurats to facilitate plotting in ggplot:
+```{r add cell embeddings to Seurat meta data}
+new_metadata <- as.data.frame(seurat_integrated@reductions$umap@cell.embeddings) #get the cell embeddings
+colnames(new_metadata) <- paste0("allcells_", colnames(new_metadata)) #prepend the UMAP coordinates with `allcells`
+seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
+
+new_metadata <- as.data.frame(cd8@reductions$umap@cell.embeddings) #get the cell embeddings
+cd8 <- AddMetaData(cd8, new_metadata) #add to the meta data
+
+new_metadata <- as.data.frame(cd4@reductions$umap@cell.embeddings) #get the cell embeddings
+cd4 <- AddMetaData(cd4, new_metadata) #add to the meta data
 
 #save the Seurats
 saveRDS(seurat_integrated, "objects/seurat_integrated_clustered.rds")
